--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,10 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "stylelint-order": "^1.0.0",
-    "vue": "^2.5.2"
+    "vue": "^2.5.2",
+    "vue-resource": "^1.5.1",
+    "vue-router": "^3.0.1",
+    "stylelint-order": "^1.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
