--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,10 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "stylelint-order": "^1.0.0",
     "vue": "^2.5.2",
     "vue-resource": "^1.5.1",
-    "vue-router": "^3.0.1",
-    "stylelint-order": "^1.0.0"
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -64,7 +64,7 @@
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
-    "stylelint": "^9.4.0",
+    "stylelint": "^9.5.0",
     "stylelint-config-recess-order": "^2.0.0",
     "stylelint-config-standard": "^18.2.0",
     "uglifyjs-webpack-plugin": "^1.1.1",
