--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ stages:
 test:
     stage: test
     tags:
-        - test
+        - share
     script:
         - pip3 install coverage --quiet
         - python -m coverage run --source="." manage.py test
@@ -14,7 +14,7 @@ test:
 lint:
     stage: lint
     tags:
-        - test
+        - share
     script:
         pip install pylint==1.7.5 --quiet
         pip install pylint-django --quiet
