Modify yml file again.Ref #116

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,10 +7,7 @@ test:
     tags:
         - shared
     script:
-        - wget "https://pypi.python.org/packages/source/p/pip/pip-1.5.4.tar.gz#md5=834b2904f92d46aaa333267fb1c922bb" --no-check-certificate
-        - tar -xzvf pip-1.5.4.tar.gz
-        - python setup.py install
-        - pip install coverage --quiet
+        - pip3 install coverage --quiet
         - python -m coverage run --source="." manage.py test
         - python -m coverage report
 
