Modify yml file again.Ref #116

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,12 +7,18 @@ test:
     tags:
         - shared
     script:
-
+        - sudo apt-get install python-pip python-dev build-essential
+        - sudo pip install --upgrade pip
+        - pip install coverage --quiet
+        - python -m coverage run --source="." manage.py test
+        - python -m coverage report
 
 lint:
     stage: lint
     tags:
         - shared
     script:
-
+        - pip install pylint==1.7.5 --quiet
+        - pip install pylint-django --quiet
+        - pylint --rcfile=.pylintrc || exit $((35 & $?))
     allow_failure: false
