--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ test:
     stage: backendtest
     script:
         - cd ./server
+        - pip install pycrypto
         - python3 -m coverage run --source="." manage.py test --noinput
         - python3 -m coverage report
 
