--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "echarts": "^4.1.0",
     "stylelint-order": "^1.0.0",
     "vue": "^2.5.2",
     "vue-resource": "^1.5.1",
